# COMP4300-Rust

./: Cargo.toml  README.md
benches/: ecs_bench.rs
common/: Cargo.toml
common/src/: event.rs  game_transform.rs  lib.rs  math.rs
ecs/: Cargo.toml
ecs/src/: entity.rs  lib.rs  manager.rs  type_query.rs
src/: common.rs  game.rs  main.rs  math.rs  ui.rs
src/common/: event.rs
src/space_shooter/: config  mod.rs
src/space_shooter/component/: game.rs  general.rs  mod.rs  movement.rs  physics.rs  shape.rs
src/space_shooter/system/: collision.rs  game.rs  mod.rs  movement.rs  render.rs  ui.rs
