[package]
name = "comp4300"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
member = ["./ecs"]

[dependencies]
ggez = "0.7.0"
ecs = { path = "./ecs" }
rand = "0.8.4"
pprof = { version = "0.6.1", features = ["flamegraph"] }
