[package]
name = "comp4300"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./ecs", "./common"]

[dependencies]
ggez = "0.7.0"
ecs = { path = "./ecs" }
rand = "0.8.5"
common = { path = "./common" }
sdl2 = { version = "0.35.2", features = [ "bundled" ] }
